--- a/values-airflow.yaml
+++ b/values-airflow.yaml
@@ -2322,7 +2322,7 @@ config:
 
 # Whether Airflow can launch workers and/or pods in multiple namespaces
 # If true, it creates ClusterRole/ClusterRolebinding (with access to entire cluster)
-multiNamespaceMode: false
+multiNamespaceMode: true
 
 # `podTemplate` is a templated string containing the contents of `pod_template_file.yaml` used for
 # KubernetesExecutor workers. The default `podTemplate` will use normal `workers` configuration parameters
